--- a/cat-face/package.json
+++ b/cat-face/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "mosha-vue-toastify": "^1.0.23",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
