--- a/cat-face/package.json
+++ b/cat-face/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "mosha-vue-toastify": "^1.0.23",
+    "phaser": "^3.55.2",
     "startbootstrap-one-page-wonder": "^6.0.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
